fixed popover opening menu and element not clickable behind logo in `SidebarMenu`

--- a/client/src/theme/components/popovers.scss
+++ b/client/src/theme/components/popovers.scss
@@ -42,11 +42,6 @@
   --width: var(--popover-option-width);
 }
 
-.workspace-context-menu-sidebar {
-  --offset-x: 1.25rem;
-  --offset-y: -0.5rem;
-}
-
 #workspace-context-menu,
 #file-context-menu,
 #user-context-menu,
